// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Combobox > Snapshots > matches default snapshot 1`] = `
<button
  aria-controls="radix-«r0»"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="button button--outline button--default-size combobox__trigger combobox__trigger--placeholder"
  data-state="closed"
  data-testid="combobox"
  role="combobox"
  type="button"
>
  Select option...
  <svg
    aria-hidden="true"
    class="lucide lucide-chevrons-up-down combobox__icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m7 15 5 5 5-5"
    />
    <path
      d="m7 9 5-5 5 5"
    />
  </svg>
</button>
`;

exports[`Combobox > Snapshots > matches disabled state snapshot 1`] = `
<button
  aria-controls="radix-«r1»"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="button button--outline button--default-size combobox__trigger combobox__trigger--placeholder"
  data-state="closed"
  data-testid="combobox"
  disabled=""
  role="combobox"
  type="button"
>
  Select option...
  <svg
    aria-hidden="true"
    class="lucide lucide-chevrons-up-down combobox__icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m7 15 5 5 5-5"
    />
    <path
      d="m7 9 5-5 5 5"
    />
  </svg>
</button>
`;

exports[`Combobox > Snapshots > matches empty state snapshot 1`] = `
<button
  aria-controls="radix-«r3»"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="button button--outline button--default-size combobox__trigger combobox__trigger--placeholder"
  data-state="closed"
  data-testid="combobox"
  role="combobox"
  type="button"
>
  Select option...
  <svg
    aria-hidden="true"
    class="lucide lucide-chevrons-up-down combobox__icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m7 15 5 5 5-5"
    />
    <path
      d="m7 9 5-5 5 5"
    />
  </svg>
</button>
`;

exports[`Combobox > Snapshots > matches selected state snapshot 1`] = `
<button
  aria-controls="radix-«r2»"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="button button--outline button--default-size combobox__trigger"
  data-state="closed"
  data-testid="combobox"
  role="combobox"
  type="button"
>
  Option 1
  <svg
    aria-hidden="true"
    class="lucide lucide-chevrons-up-down combobox__icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m7 15 5 5 5-5"
    />
    <path
      d="m7 9 5-5 5 5"
    />
  </svg>
</button>
`;
